Fix second blinking cursor on mathquill editor on iOS
Summary: Fixes the second blinking cursor seen on iOS (https://github.com/mathquill/mathquill/issues/310).

Test Plan: - Test mathquill editor on iOS and observe that there is only one cursor

Reviewers: aria, alex

Reviewed By: alex

Differential Revision: http://phabricator.khanacademy.org/D12105

--- a/src/css/textarea.less
+++ b/src/css/textarea.less
@@ -15,5 +15,9 @@
     position: absolute;
     clip: rect(1em 1em 1em 1em);
     resize: none; // hotfix: https://code.google.com/p/chromium/issues/detail?id=355199#c1
+
+    // fix double-cursor in iOS
+    border: none;
+    height: 1px;
   }
 }
